Fix images on mobile.

--- a/src/app/galeria/galeria.component.css
+++ b/src/app/galeria/galeria.component.css
@@ -12,7 +12,7 @@
 }
 
 .zdjecie {
-  width: 350px;
+  width: 100%;
   height: auto;
 }
 
